--- a/src/main/resources/templates/main/pick.html
+++ b/src/main/resources/templates/main/pick.html
@@ -13,7 +13,7 @@
 </section>
 
 <!-- SIDEBAR -->
-<div id="sidebar" th:replace="layout/layout :: sidebar('main')">
+<div id="sidebar" th:replace="layout/layout :: sidebar('pick')">
 </div>
 <!-- // SIDEBAR -->
 
