--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -10,8 +10,6 @@
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3">
 
-        <!-- 여기서부터 쪼개면 됨 -->
-
         <div class="row p-0 m-0">
             <div class="col-md-12 py-4">
                 <div class="card">
@@ -34,8 +32,9 @@
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <h4><b>인기글</b></h4>
-                                <button type="button" class="btn btn-outline-primary p-1">
-                                    <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span></button>
+                                <a class="btn btn-outline-primary p-1" th:href="@{/hot}">
+                                    <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span>
+                                </a>
                             </div>
 
                             <table class="table">
@@ -133,7 +132,7 @@
                 <div class="card">
                     <div class="card-body">
 
-                        <!-- SERCTION 1 -->
+                        <!-- SERCTION 2 -->
                         <div style="font-size: .5rem !important;">
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
@@ -227,7 +226,7 @@
                             </table>
 
                         </div>
-                        <!-- // SERCTION 1 -->
+                        <!-- // SERCTION 2 -->
 
                     </div>
                 </div>
@@ -235,13 +234,12 @@
 
         </div>
 
-        <!-- 여기서부터 쪼개면 됨 -->
 
     </div>
 </section>
 
 <!-- SIDEBAR -->
-<div id="sidebar" th:replace="layout/layout :: sidebar('main')">
+<div id="sidebar" th:replace="layout/layout :: sidebar('home')">
 </div>
 <!-- // SIDEBAR -->
 
