--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -9,6 +9,11 @@
 
 <section class="w-100 vh-100">
   <div class="col-lg-6 mx-auto bg-white vh-100 p-4">
+    <div>
+      <a class="btn btn-outline-primary p-1" th:href="@{/}">
+        <i class="fa fa-arrow-left"></i> 메인페이지로
+      </a>
+    </div>
     <br>
     <h3 class="text-center pt-5">로그인</h3>
     <br><br>
