--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -29,17 +29,7 @@
             </div>
         </div>
 
-        <div class="p-2 d-flex justify-content-between align-items-end">
-
-            <a th:href="@{/board/like(s=${stockId}, b=${board.boardId})}">
-                <h5>
-                    <span class="text-dark">좋아요</span>
-                    <i th:if="${isLiked.equals(true)}" class="fas fa-heart text-danger"></i>
-                    <i th:if="${isLiked.equals(false)}" class="far fa-heart text-secondary"></i>
-                    <span class="text-dark" th:text="${countLikes}"></span>
-                </h5>
-            </a>
-
+        <div class="p-2 text-end">
             <div th:if="${board.user.username} == ${user}">
                 <form th:action="@{/board/delete}" th:method="POST">
 
@@ -53,10 +43,20 @@
             </div>
         </div>
 
+        <div class="p-4 text-center">
+            <a th:href="@{/board/like(s=${stockId}, b=${board.boardId})}">
+                <h3>
+                    <span th:classappend="${isLiked.equals(true)} ? 'text-danger' : 'text-secondary'">가즈아 !!</span>
+                    <i class="fa fa-chart-line" th:classappend="${isLiked.equals(true)} ? 'text-danger' : 'text-secondary'"></i>
+                    <span class="text-dark" th:text="${countLikes}"></span>
+                </h3>
+            </a>
+        </div>
+
         <div class="mt-5 p-2">
 
             <div class="p-2">
-                <span classt="pb-1">댓글 작성</span>
+                <h5 classt="pb-1">댓글 작성</h5>
                 <form th:action="@{/comment/create/{boardId}(boardId = ${board.boardId})}" th:method="POST">
                     <textarea class="form-control" name="content" row="4"></textarea>
 
@@ -82,7 +82,8 @@
                 </div>
 
                 <div class="text-end" th:if="${comment.user.username} == ${user}">
-                    <button type="button" class="btn btn-outline-dark p-1 border border-0" th:onclick="delComment([[${stockId}]], [[${board.boardId}]], [[${comment.commentId}]])">
+                    <button type="button" class="btn btn-outline-dark p-1 border border-0"
+                            th:onclick="delComment([[${stockId}]], [[${board.boardId}]], [[${comment.commentId}]])">
                         <span><small>삭제</small></span>
                     </button>
                 </div>
