--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -35,19 +35,23 @@
         </a>
 
         <a class="btn btn-primary rounded-circle bg-white border border-white text-dark">
-            <i class="fa fa-heart"></i>
+            <i class="far fa-bell"></i>
         </a>
 
         <a class="btn btn-dark" th:href="@{/}">
             GIANTS
         </a>
 
-        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" th:href="@{/search}">
+        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" th:href="@{/main/search}">
             <i class="fa fa-search"></i>
         </a>
 
+        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" sec:authorize="!isAuthenticated()" th:href="@{/auth/login}">
+            <i class="fa fa-sign-in-alt"></i>
+        </a>
+
         <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" data-bs-toggle="dropdown"
-                aria-expanded="false">
+                aria-expanded="false" sec:authorize="isAuthenticated()">
             <i class="fa fa-user"></i>
         </a>
         <ul class="dropdown-menu p-0">
@@ -77,13 +81,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link link-dark" th:classappend="${sidebar == 'pick'} ? 'nav-line active'" th:href="@{/pick}">
+                    <a href="#" class="nav-link link-dark" th:classappend="${sidebar == 'pick'} ? 'nav-line active'" th:href="@{/main/pick}">
                         <i class="fa fa-paper-plane"></i>&nbsp;&nbsp;
                         <span>Editor's Pick</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link link-dark" th:classappend="${sidebar == 'hot'} ? 'nav-line active'" th:href="@{/hot}">
+                    <a href="#" class="nav-link link-dark" th:classappend="${sidebar == 'hot'} ? 'nav-line active'" th:href="@{/main/hot}">
                         <i class="fa fa-star"></i>&nbsp;&nbsp;
                         <span>인기글</span>
                     </a>
@@ -94,7 +98,7 @@
                         <span>최근공시</span>
                     </a>
                 </li>
-                <li>
+                <li sec:authorize="isAuthenticated()">
                     <a href="#" class="nav-link link-dark" th:classappend="${sidebar == 'mypage'} ? 'nav-line active'" th:href="@{/user/mypage}">
                         <i class="fa fa-user"></i>&nbsp;&nbsp;
                         <span>마이페이지</span>
