--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -10,15 +10,19 @@
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3">
         <div th:text="${stock}"></div>
-        <form th:action="@{/board/submit}" th:method="POST">
+        <form th:action="@{/board/write}" th:method="POST" th:object="${board}">
             <input type="hidden" name="stockId" th:value="${stock}">
             <div class="py-4">
                 <label>제목</label>
-                <input type="text" class="form-control" name="title" autocomplete="off">
+                <input type="text" class="form-control" name="title" autocomplete="off" th:field="*{title}" th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
+                </div>
             </div>
             <div class="py-4">
                 <label>내용</label>
-                <textarea class="form-control" name="content" id="content" rows="10"></textarea>
+                <textarea class="form-control" name="content" id="content" rows="10" th:field="*{content}"></textarea>
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
+                </div>
             </div>
             <div class="py-4">
                 <button type="submit" class="btn btn-outline-success">저장</button>
