--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -11,9 +11,6 @@
 <section>
     <div class="main col-lg-8  bg-white m-auto h-100 p-3 overflow-auto">
 
-        <!-- 여기서부터 쪼개면 됨 -->
-
-
         <!-- tab -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -31,14 +28,13 @@
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <div class="row p-0 m-0">
 
-                    <div class="col-md-12 mb-2">
-                        <div class="p-4">
+                    <div class="p-5">
 
                             <!-- SERCTION 1 -->
                             <div style="font-size: .5rem !important;">
 
                                 <div class="d-flex justify-content-between align-items-center mb-2">
-                                    <h4><b>작성글</b></h4>
+                                    <h2 class="p-3">작성글</h2>
                                 </div>
 
                                 <!-- test -->
@@ -65,7 +61,6 @@
                             <!-- // SERCTION 1 -->
 
                         </div>
-                    </div>
                 </div>
             </div>
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
@@ -96,8 +91,6 @@
             </div>
         </div>
         <!-- tab -->
-
-        <!-- 여기서부터 쪼개면 됨 -->
 
     </div>
 </section>
