--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -32,7 +32,7 @@
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <h4><b>인기글</b></h4>
-                                <a class="btn btn-outline-primary p-1" th:href="@{/hot}">
+                                <a class="btn btn-outline-primary p-1" th:href="@{/main/hot}">
                                     <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span>
                                 </a>
                             </div>
