기업 개요 컬럼 추가 (업종, 주요제품)

--- a/src/main/resources/templates/main/search.html
+++ b/src/main/resources/templates/main/search.html
@@ -35,6 +35,7 @@
 
         <!-- 여기서부터 쪼개면 됨 -->
         <div class="row p-5">
+            <h4 class="p-3">종목명으로 검색하세요.</h4>
             <form th:action="@{/main/stock}" th:method="GET">
                 <div class="ui-widget d-flex">
 
