종목 메인 수정, eiditor's pick 권한 설정 종목 메인 페이지 최신글 10개 출력, 어드민(editor's pick) 추가 기획 필요

--- a/src/main/resources/templates/main/stock.html
+++ b/src/main/resources/templates/main/stock.html
@@ -71,6 +71,7 @@
 
                             <table class="table">
                                 <thead>
+
                                 <tr>
                                     <th>작성자</th>
                                     <th>제목</th>
@@ -80,75 +81,12 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                <tr th:each="board : ${boards}">
+                                    <td th:text="${board.user.username}"></td>
+                                    <td th:text="${board.title}"></td>
+                                    <td th:text="${board.createdAt}"></td>
+                                    <td th:text="${board.cntLike}"></td>
+                                    <td th:text="${board.cntComment}"></td>
                                 </tr>
                                 </tbody>
                             </table>
