--- a/src/main/resources/templates/main/pick.html
+++ b/src/main/resources/templates/main/pick.html
@@ -9,6 +9,10 @@
 
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+        <div class="p-3" th:text="${username}"></div>
+        <div class="p-3" th:if="${username} == 'admin'">
+            <button type="submit" class="text-outline-primary">작성</button>
+        </div>
     </div>
 </section>
 
