--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -50,12 +50,13 @@
             <i class="fa fa-sign-in-alt"></i>
         </a>
 
-        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" data-bs-toggle="dropdown"
-                aria-expanded="false" sec:authorize="isAuthenticated()">
+        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" data-bs-toggle="dropdown" aria-expanded="false" sec:authorize="isAuthenticated()">
             <i class="fa fa-user"></i>
         </a>
         <ul class="dropdown-menu p-0">
             <li><a class="dropdown-item p-2" th:href="@{/user/mypage}">마이페이지</a></li>
+            <hr class="dropdown-divider m-0">
+            <li><a class="dropdown-item p-2" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin/dashboard}">DASHBOARD</a></li>
             <hr class="dropdown-divider m-0">
             <li><a class="dropdown-item p-2" th:href="@{/logout}">로그아웃</a></li>
         </ul>
