--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -8,8 +8,12 @@
 </nav>
 
 <section>
-  <div class="main col-lg-8 bg-white m-auto h-100 p-3">
-  </div>
+    <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+        <div>
+            <a class="btn btn-outline-primary" th:href="@{/admin/write}">작성</a>
+        </div>
+    </div>
+
 </section>
 
 <!-- SIDEBAR -->
