--- a/src/main/resources/templates/main/pick.html
+++ b/src/main/resources/templates/main/pick.html
@@ -9,7 +9,57 @@
 
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3">
-    </div>
+        <table class="table">
+            <colgroup>
+                <col width="20%">
+                <col width="50%">
+                <col width="30%">
+            </colgroup>
+            <thead class="text-center">
+            <tr>
+                <th>작성자</th>
+                <th>제목</th>
+                <th>작성일</th>
+            </thead>
+            <tbody>
+            <tr th:each="pick : ${picks}">
+                <td class="text-center">EDITOR</td>
+                <td class="pl-2" th:text="${pick.title}"></td>
+                <td class="text-center" th:text="${pick.createdAt}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <br>
+        <div class="d-flex justify-content-center">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+
+                    <li class="page-item" th:classappend="${1 == picks.pageable.pageNumber + 1} ? 'disabled'">
+                        <a class="page-link" href="#" aria-label="Previous"
+                           th:href="@{/ep/list(page=${picks.pageable.pageNumber - 1}, search=${param.search})}">
+                            <span aria-hidden="true"> < </span>
+                        </a>
+                    </li>
+
+                    <li class="page-item" th:classappend="${i == picks.pageable.pageNumber + 1} ? 'disabled'"
+                        th:each="i : ${#numbers.sequence(startPage, endPage)}">
+                        <a class="page-link"
+                           th:href="@{/ep/list(search=${param.search}, page=${i - 1})}">
+                            <span th:text="${i}"></span>
+                        </a>
+                    </li>
+
+                    <li class="page-item"
+                        th:classappend="${picks.totalPages == picks.pageable.pageNumber + 1} ? 'disabled'">
+                        <a class="page-link" href="#" aria-label="Next"
+                           th:href="@{/ep/list(page=${picks.pageable.pageNumber + 1}, search=${param.search})}">
+                            <span aria-hidden="true"> > </span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
 </section>
 
 <!-- SIDEBAR -->
