--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -94,13 +94,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link link-dark">
+                    <a class="nav-link link-dark" th:href="@{/disclosure/all}">
                         <i class="fa fa-list-alt"></i>&nbsp;&nbsp;
                         <span>최근공시</span>
                     </a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
-                    <a href="#" class="nav-link link-dark" th:classappend="${sidebar == 'mypage'} ? 'nav-line active'" th:href="@{/user/mypage}">
+                    <a class="nav-link link-dark" th:classappend="${sidebar == 'mypage'} ? 'nav-line active'" th:href="@{/user/mypage}">
                         <i class="fa fa-user"></i>&nbsp;&nbsp;
                         <span>마이페이지</span>
                     </a>
