--- a/src/main/resources/templates/auth/join.html
+++ b/src/main/resources/templates/auth/join.html
@@ -11,13 +11,7 @@
 
         <h3 class="text-center pt-5">회원가입</h3>
         <br>
-        <form th:action="@{/auth/join}" th:method="POST">
-            <!--      <div class="w-100 py-2">-->
-            <!--        <label for="username">E-mail</label>-->
-            <!--        <input class="form-control" type="email" id="username" name="username">-->
-            <!--        <button class="btn btn-primary w-100 mt-1" onclick="sendEmail()">인증메일 발송</button>-->
-            <!--      </div>-->
-
+        <form th:action="@{/auth/join}" th:method="POST" onsubmit="return joinValidation()">
 
             <div class="w-100 py-2">
                 <label for="username">Username</label>
@@ -27,10 +21,10 @@
                 <label for="password">Password</label>
                 <input class="form-control" type="password" id="password" name="password">
             </div>
-<!--            <div class="w-100 py-2">-->
-<!--                <label>Password 확인</label>-->
-<!--                <input class="form-control mt-2" type="password" id="password" name="password">-->
-<!--            </div>-->
+            <div class="w-100 py-2">
+                <label for="password">Password check</label>
+                <input class="form-control" type="password" id="pwChk">
+            </div>
             <div class="w-100 py-3">
                 <button type="submit" class="btn btn-primary w-100" onclick="join()">
                     <span>회원가입 완료</span>
@@ -44,7 +38,23 @@
     </div>
 </section>
 
+<script>
+    function joinValidation() {
+        const pw = document.getElementById("password").value;
+        const pw2 = document.getElementById("pwChk").value;
+        const username = document.getElementById("username").value;
 
+        if (username == ""){
+            alert("아이디를 확인해주세요.");
+            return false;
+        }
+
+        if (pw == '' || pw2 == '' || pw != pw2) {
+            alert("비밀번호를 확인해주세요.");
+            return false;
+        }
+    }
+</script>
 </body>
 
 </html>
