--- a/src/main/resources/templates/main/search.html
+++ b/src/main/resources/templates/main/search.html
@@ -31,7 +31,7 @@
 </nav>
 
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
 
         <!-- 여기서부터 쪼개면 됨 -->
         <div class="row p-5">
