--- a/src/main/resources/templates/admin/write.html
+++ b/src/main/resources/templates/admin/write.html
@@ -8,7 +8,7 @@
 </nav>
 
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
         <div class="p-md-4">
             <form th:action="@{/admin/submit}" th:method="POST">
                 <br>
