--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -8,7 +8,7 @@
 </nav>
 
 <section>
-    <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
 
         <div class="row p-0 m-0">
             <div class="col-md-12 py-4">
@@ -137,8 +137,8 @@
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <h4><b>최근공시</b></h4>
-                                <button type="button" class="btn btn-outline-primary p-1">
-                                    <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span></button>
+                                <a type="button" class="btn btn-outline-primary p-1" th:href="@{/report/today}">
+                                    <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span></a>
                             </div>
 
                             <table class="table">
