--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('hot')">
+<head th:replace="layout/layout :: head('ADMIN')">
 </head>
 
 <body>
-<nav class="bg-dark" th:replace="layout/layout :: menu('hot')">
+<nav class="bg-dark" th:replace="layout/layout :: menu('ADMIN')">
 </nav>
 
 <section>
@@ -17,7 +17,7 @@
 </section>
 
 <!-- SIDEBAR -->
-<div id="sidebar" th:replace="layout/layout :: sidebar('hot')">
+<div id="sidebar" th:replace="layout/layout :: sidebar('ADMIN')">
 </div>
 <!-- // SIDEBAR -->
 
