--- a/src/main/resources/templates/admin/write.html
+++ b/src/main/resources/templates/admin/write.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('pick')">
+<head th:replace="layout/layout :: head('PICK')">
 </head>
 
 <body>
-<nav class="bg-dark" th:replace="layout/layout :: menu('pick')">
+<nav class="bg-dark" th:replace="layout/layout :: menu('PICK')">
 </nav>
 
 <section>
@@ -34,7 +34,7 @@
 </section>
 
 <!-- SIDEBAR -->
-<div id="sidebar" th:replace="layout/layout :: sidebar('pick')">
+<div id="sidebar" th:replace="layout/layout :: sidebar('PICK')">
 </div>
 <!-- // SIDEBAR -->
 
