--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('main')">
+<head th:replace="layout/layout :: head('MAIN')">
 </head>
 
 <body>
-<nav class="bg-dark" th:replace="layout/layout :: menu('main')">
+<nav class="bg-dark" th:replace="layout/layout :: menu('MAIN')">
 </nav>
 
 <section>
@@ -97,7 +97,7 @@
 </section>
 
 <!-- SIDEBAR -->
-<div id="sidebar" th:replace="layout/layout :: sidebar('main')">
+<div id="sidebar" th:replace="layout/layout :: sidebar('MAIN')">
 </div>
 <!-- // SIDEBAR -->
 
