--- a/src/main/resources/templates/main/search.html
+++ b/src/main/resources/templates/main/search.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('main')">
+<head th:replace="layout/layout :: head('SEARCH')">
 
 </head>
 
@@ -27,7 +27,7 @@
 </script>
 
 
-<nav class="bg-dark" th:replace="layout/layout :: menu('main')">
+<nav class="bg-dark" th:replace="layout/layout :: menu('SEARCH')">
 </nav>
 
 <section>
@@ -53,7 +53,7 @@
 </section>
 
 <!-- SIDEBAR -->
-<div id="sidebar" th:replace="layout/layout :: sidebar('main')">
+<div id="sidebar" th:replace="layout/layout :: sidebar('SEARCH')">
 </div>
 <!-- // SIDEBAR -->
 
